# vps-renew-notification

./: README.md
vps-renew-notification/: Cargo.toml  env-example
vps-renew-notification-go/: .gitignore  config.json-example  go.mod  go.sum
vps-renew-notification-go/cmd/: main.go
vps-renew-notification-go/config/: config.go
vps-renew-notification-go/internal/db/: db.go  provider.go  user.go  vps.go
vps-renew-notification-go/internal/filter/: filter.go
vps-renew-notification-go/internal/jwt/: jwt.go
vps-renew-notification-go/internal/model/: model.go
vps-renew-notification-go/internal/pkg/: id.go  password.go  str.go  tg.go
vps-renew-notification-go/internal/state/: state.go
vps-renew-notification-go/internal/types/: time.go  time_test.go
vps-renew-notification-go/tg/: tg.go
vps-renew-notification-go/web/handler/: auth.go  provider.go  tg.go  (+2 more)
vps-renew-notification-ui/: .gitignore  env-example  index.html  package.json  tsconfig.json  vite.config.ts
vps-renew-notification-ui/src/: App.vue  fetch.ts  main.ts  style.css
vps-renew-notification/script/: vps-renew-notification.sql
vps-renew-notification/src/: chrono.rs  config.rs  err.rs  filter.rs  lib.rs  main.rs  middleware.rs  model.rs  resp.rs  route.rs  state.rs  tg.rs
vps-renew-notification/src/db/: mod.rs  provider.rs  user.rs  vps.rs
vps-renew-notification/src/handler/: auth.rs  bot.rs  helper.rs  mod.rs  provider.rs  user.rs  vps.rs
vps-renew-notification/src/jwt/: claims.rs  mod.rs
vps-renew-notification/src/payload/: bot.rs  login.rs  mod.rs  provider.rs  user.rs  vps.rs
(+49 files in other folders)
