[package]
name = "vps-renew-notification"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/vps-renew-notification"
homepage = "https://axum.rs"
description = "VPS续费通知"


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
