[package]
name = "vps-renew-notification"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/vps-renew-notification"
homepage = "https://axum.rs"
description = "VPS续费通知"


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
xid = "1"
bcrypt = "0.15"
sha2 = "0.10"
base16ct = "0.2"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "json",
] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors"] }
validator = { version = "0.17", features = ["derive"] }
serde_json = "1"
